@@ -265,5 +265,3 @@ valores long int
 
 -Soporte ulaplus en Next
 
--Comando ZRCP para guardar pantalla en scr y pnm
-Puede servir para versión online simple. Salida pnm y entrada de texto
